# MASE-agent-memory

./: .coverage  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  7DAY_SPRINT_PLAN.md  7DAY_SPRINT_PLAN_大白话版.md  BENCHMARKS.md  CHANGELOG.md  CODE_MAP.md  CODE_MAP_大白话版.md  DAILY_CHECKLIST.md  DAILY_CHECKLIST_大白话版.md  DECISIONS.md  Dockerfile  INTERVIEW_CHEATSHEET.md  INTERVIEW_CHEATSHEET_大白话版.md  INTERVIEW_SCRIPT.md  LEGACY_SHIMS.md  LICENSE  MASE_DEEP_DIVE.md  MASE_enterprise_production_refactor_plan.md  MASE_whitebox_memory_governance_plan.md  MASE可观测平台README.md  NEXT_STEPS.md  README.md  RELEASE_NOTES_V2.md  _bamboo_abshallu.err  _lme_iter3_ablation.err  _t.py  _ti.py  config.cloud.example.json  config.dual_gpu.json  config.full_power.json  config.json  config.lme_glm5.json  config.nolima.json  config.profiles.json  docker-compose.yml  (+22 more)
.github/workflows/: ci.yml
benchmarks/: __init__.py  adapters.py  baseline.py  benchmark_cases.py  llm_judge.py  official_source_gap_audit.py  registry.py  runner.py  schemas.py  scoring.py  smoke_samples.py
benchmarks/external-benchmarks/: README.md
benchmarks/multimodal_eval/: README.md  __init__.py  build_suite.py  build_xfund_diag.py  cases.json  cases_synthetic.json  diag_xfund_train.json  generate_dataset.py  manifest.json  run_eval.py  run_xfund_diag.py
benchmarks/semantic_recall/: README.md  run_semantic_recall.py
benchmarks/staleness_pressure/: README.md  generate_scenarios.py  run_pressure.py
docs/: ADAPTIVE_VERIFY.md  ARCHITECTURE_BOUNDARIES.md  BENCHMARK_ANTI_OVERFIT.md  CONFIG_PROFILES.md  EXTERNAL_GENERALIZATION_FAILURE_REPORT.md  FULL_POWER.md  HYBRID_RECALL.md  LAUNCH_COPY.md  MEMORY_DIFF.md  NOLIMA_3WAY.md  PUBLISH_CHECKLIST.md  README_en.md  README_zh.md  V1_REGRESSION_PORTING.md  mase-platform-capability-matrix.md
docs/adr/: 2026-07-04-enterprise-evidence-pack-default.md
docs/benchmark_claims/: README.md  longmemeval.json  lveval.json  nolima.json
docs/launch-kit/: 01_GITHUB_HOMEPAGE_PACK.md  01_GITHUB_HOMEPAGE_PACK_ZH.md  02_LAUNCH_BLOG_DRAFT.md  02_LAUNCH_BLOG_DRAFT_ZH.md  03_COMMUNITY_POSTS.md  03_COMMUNITY_POSTS_ZH.md  04_ECOSYSTEM_POSITIONING.md  04_ECOSYSTEM_POSITIONING_ZH.md  05_PRELAUNCH_CHECKLIST.md  05_PRELAUNCH_CHECKLIST_ZH.md
docs/reports/: MASE_v1.0_技术报告_中英文长上下文抗衰减完整证明.md
examples/: 01_quickstart_chatbot.py  02_personal_assistant.py  03_research_agent.py  04_long_doc_qa_256k.py  05_multi_session_memory.py  06_correct_my_memory.py  07_anti_adversarial.py  08_hot_swap_models.py  09_resume_after_crash.py  10_persistent_chat_cli.py  97_multiturn_stress_probe.py  98_cowork_bridge_probe.py  99_supersede_misfire_probe.py  README.md  README_10.md
examples/10_mcp_claude_desktop/: README.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  api.test.ts  api.ts  i18n.ts  styles.css  types.ts  utils.test.ts  utils.ts
integrations/: README.md
integrations/cherry_openwebui/: README.md
integrations/langchain/: README.md  mase_memory.py
integrations/llamaindex/: README.md  mase_memory.py
integrations/mcp_server/: README.md  server.py
integrations/openai_compat/: README.md  answer_routes.py  auth_dependencies.py  cost_routes.py  diagnostic_routes.py  drift_routes.py  golden_routes.py  governance_routes.py  incident_routes.py  legacy_exports.py  lifecycle_routes.py  media_routes.py  memory_routes.py  observability_routes.py  privacy_routes.py  quality_routes.py  refusal_routes.py  repair_routes.py  replay_routes.py  responses.py  runtime.py  schemas.py  server.py  slo_routes.py  trace_routes.py
legacy_archive/: README_V1.md  event_bus.py  legacy.py  mase.py  memory_heat.py  memory_reflection.py  orchestrator.py  planner.py  planner_agent.py  temporal_parser.py
mase_tools/: __init__.py  legacy.py
mase_tools/cli/: __init__.py  __main__.py  memory_diff.py
mase_tools/core/: __init__.py
mase_tools/fact/: __init__.py
mase_tools/math/: __init__.py
mase_tools/mcp/: __init__.py  tools.py
mase_tools/media/: __init__.py  asset_store.py
scripts/: __init__.py  _analyze_iter4_failures.py  _diag_bge.py  _diag_candinj.py  _diag_en256k.py  _diag_factsheet.py  _diag_iter4_qtype.py  _diag_iter5_micro.py  _diag_meta_prompt.py  _diag_one_zh.py  _diag_prompt_ab.py  _diag_prompt_gen.py  _diag_qwen_call.py  _diag_zh_compare.py  _diag_zh_fails.py  _diag_zh_iter2.py  _diag_zh_rank.py  _diag_zh_rank2.py  _diag_zh_rank3.py  _dry2_check.py  _last_inspect.txt  _last_repro.txt  _list_lme_results.py  _lme_iter3_dev_v2.err  _patch_prompts_iter3.py  _patch_prompts_iter4.py  _patch_prompts_iter5.py  _repro_en256k.py  _run_bare.ps1  _test_stem.py  _wait_then_run_reasoning.ps1  analyze_full500.py  analyze_iter2_failures.py  audit_anti_overfit.py  audit_architecture_imports.py  audit_public_api_docstrings.py  audit_repo_hygiene.py  canary_bench.py  chaos.py  combine_iter4_retry.py  (+63 more)
tests/: conftest.py  test_abstention_guard.py  test_abstention_pregate_focus.py  test_adaptive_verify.py  test_admission_gate.py  test_agents_integrations_more.py  test_answer_support.py  test_asset_store.py  test_audio_extractor.py  test_audio_transcriber.py  test_audit_log.py  test_audit_round2_fixes.py  test_auth_policy.py  test_background_jobs.py  test_benchmark_claim_manifest.py  test_benchmark_core_coverage.py  test_benchmark_harness.py  test_benchmark_runner_registry_more.py  test_chinese_entity_expansion_guard.py  test_claim_verifier.py  test_cli_http_and_benchmark_helpers.py  test_cloud_backend.py  test_config_profile_registry.py  test_conflict_resolver.py  test_consolidation.py  test_cost_center.py  test_document_loader.py  test_drift_detector.py  test_engine_execution_and_runtime.py  test_enterprise_governance_refactor.py  test_eval_suite_adapters.py  test_event_bus_mvp.py  test_event_projection.py  test_event_semantic_recall.py  test_event_versioning.py  test_evidence_binder.py  test_evidence_pack.py  test_evidence_pack_injection.py  test_external_failure_report.py  test_fact_contract.py  (+107 more)
(+14111 files in other folders)
