[project]
name = "mase-memory"
version = "0.4.0"
description = "MASE: a dual-whitebox memory engine for LLM agents"
authors = [
    {name = "zbl1998-sdjn"},
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = ["llm", "agent-memory", "long-context", "sqlite", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25,<1.0",
    "ollama>=0.1,<1.0",
    "langgraph>=0.0.30,<1.0",
    "langchain-core>=0.1,<1.0",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.27,<1.0",
]
mcp = [
    "mcp>=1.0,<2.0",
]
langchain = [
    "langchain>=0.1,<1.0",
    "langchain-core>=0.1,<1.0",
]
llamaindex = [
    "llama-index-core>=0.10,<1.0",
]
multimodal = [
    "pymupdf>=1.24,<2.0",
]
all = [
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.27,<1.0",
    "mcp>=1.0,<2.0",
    "langchain>=0.1,<1.0",
    "langchain-core>=0.1,<1.0",
    "llama-index-core>=0.10,<1.0",
    "pymupdf>=1.24,<2.0",
]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-xdist>=3.0,<4.0",
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.27,<1.0",
    "numpy>=1.26,<3.0",
    "tiktoken>=0.7,<1.0",
    "ruff==0.15.10",
    "mypy>=1.10,<2.0",
    "pre-commit>=3.5,<5.0",
    "pymupdf>=1.24,<2.0",
]

[project.urls]
Homepage = "https://github.com/zbl1998-sdjn/MASE"
Repository = "https://github.com/zbl1998-sdjn/MASE"
Issues = "https://github.com/zbl1998-sdjn/MASE/issues"
Documentation = "https://github.com/zbl1998-sdjn/MASE#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# -------- Hatch 构建：src/mase 主包 + 根目录兼容 shim --------
[tool.hatch.build.targets.wheel]
# 真实代码位于 src/mase。根目录 executor.py / router.py 等 shim 只为旧导入路径
# 保持兼容，因此用 force-include 显式映射到 wheel 根目录；新逻辑不应继续写进这些根目录文件。
packages = ["src/mase", "mase_tools", "benchmarks"]

[tool.hatch.build.targets.wheel.force-include]
"executor.py" = "executor.py"
"router.py" = "router.py"
"planner_agent.py" = "planner_agent.py"
"planner.py" = "planner.py"
"notetaker.py" = "notetaker.py"
"notetaker_agent.py" = "notetaker_agent.py"
"model_interface.py" = "model_interface.py"
"protocol.py" = "protocol.py"
"topic_threads.py" = "topic_threads.py"
"reasoning_engine.py" = "reasoning_engine.py"
"langgraph_orchestrator.py" = "langgraph_orchestrator.py"
"event_versioning.py" = "event_versioning.py"
"event_bus.py" = "event_bus.py"
"memory_heat.py" = "memory_heat.py"
"memory_reflection.py" = "memory_reflection.py"
"orchestrator.py" = "orchestrator.py"
"temporal_parser.py" = "temporal_parser.py"
"mase_cli.py" = "mase_cli.py"

[tool.hatch.build.targets.wheel.sources]
"src/mase" = "mase"

# -------- Ruff：静态错误与低风险自动修复 --------
[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
    "legacy_archive",
    "run_artifacts",
    "dist",
    "build",
    ".venv",
    "venv",
    "benchmarks/external-benchmarks",
    "__pycache__",
    ".pytest_cache",
]

[tool.ruff.lint]
# F=未使用/未定义，B=bugbear 真实风险，E9=语法错误，BLE=宽泛 except，
# TRY=try/except 反模式，I=导入排序，UP=pyupgrade。
select = ["F", "B", "E9", "BLE", "TRY003", "TRY004", "TRY201", "I", "UP"]
# E501 故意不启用：中文 benchmark prompt 和证据文本会天然拉长列宽。
ignore = [
    "B008",   # 默认参数里调用函数：pytest/FastAPI 现有模式中较常见
    "B904",   # langgraph_orchestrator 已修主要链路；对历史代码保持宽松
    "TRY003", # raise 中保留长说明文本，便于用户定位配置/模型问题
    "UP007",  # Optional[X] 与 X | None 暂时并存，降低迁移噪声
]

[tool.ruff.lint.per-file-ignores]
# 中文密集 benchmark fixture 不用样式规则阻断。
"benchmarks/benchmark_cases.py" = ["E", "W"]
# benchmark 适配器包裹外部数据集解析器，宽泛捕获是隔离失败的边界。
"benchmarks/**" = ["BLE001"]
# 运行时安全网：LLM / infra 异常不应直接打崩 agent 主流程。
"executor.py" = ["BLE001"]
"mase_tools/memory/gc_agent.py" = ["BLE001"]
"src/mase/engine.py" = ["BLE001"]                # 后台任务/迁移错误不能打崩 MASESystem
"src/mase/model_interface.py" = ["BLE001"]       # LLM 客户端门面：网络/解析路径全部安全兜底
"src/mase/model_providers.py" = ["BLE001"]       # provider 协议层：网络/解析路径全部安全兜底
"src/mase/hybrid_recall.py" = ["BLE001"]         # 召回 fallback 链路应降级返回，而不是抛穿主流程
"src/mase/multipass_retrieval.py" = ["BLE001", "B905"]  # 多路查询 fan-out 与 zip 配对需要保留
"src/mase/notetaker_agent.py" = ["BLE001"]       # tool-call 解析必须容忍畸形 LLM 输出
"src/mase/multimodal/vision_extractor.py" = ["BLE001"]  # VLM 回复解析降级,不抛穿批处理
"src/mase/multimodal/ingest.py" = ["BLE001"]            # 逐文件隔离:任意异常落 infra_errors
"src/mase/structured_log.py" = ["BLE001"]        # 日志写入失败不能影响主流程
"src/mase/fact_sheet.py" = ["BLE001"]
"src/mase/metrics.py" = ["BLE001", "UP031"]      # %.2f%% 写法更贴近人工读数
"tests/**" = ["BLE001", "B017", "I001"]   # 测试常刻意宽泛捕获；导入顺序不作为阻断项
"scripts/**" = ["BLE001", "B905", "B007", "I001"]   # 入口/诊断脚本允许 zip 配对和未用循环变量
# benchmarks/runner.py 仍保留 BLE001：这里包裹外部 benchmark adapter，失败要落到
# attempt_rows 和 infra_error，而不是中断整个批次。
"benchmarks/runner.py" = ["BLE001"]

# -------- Mypy：渐进类型检查，先覆盖稳定门面 --------
[tool.mypy]
python_version = "3.10"
files = ["executor.py", "planner_agent.py", "router.py", "model_interface.py", "protocol.py", "src/mase/multimodal"]
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
# 这些模块已有较完整类型标注；其余模块继续分批纳入。
exclude = "(legacy_archive|run_artifacts|dist|build|benchmarks/external-benchmarks)"

[[tool.mypy.overrides]]
module = ["legacy_archive.*"]
follow_imports = "skip"

# -------- Pytest：默认只收集 tests/，慢测/集成测用 marker 分离 --------
[tool.pytest.ini_options]
minversion = "8.0"
pythonpath = [".", "src"]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: tests that require network access or a running model backend (deselect with '-m \"not integration\"')",
    "slow: long-running benchmarks (deselect with '-m \"not slow\"')",
]
